Update react to 17

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "watch": "tsc -p . --watch",
     "watch-sample-plugin": "cd sample-plugin && tsc -p . --watch",
     "bundle": "node ./script/dts.js && node ./script/electron.js",
-    "dts": "node ./script/dts.js"
+    "dts": "node ./script/dts.js",
+    "start:dev": "export DEBUG=true && npm run build && electron ."
   },
   "readme": "https://github.com/BabylonJS/Editor/blob/master/README.md",
   "license": "(Apache-2.0)",
@@ -37,18 +38,17 @@
     "@types/http-server": "0.10.0",
     "@types/jquery": "3.3.33",
     "@types/mocha": "5.2.7",
-    "@types/node": "13.9.0",
+    "@types/node": "17.0.29",
     "@types/offscreencanvas": "2019.6.4",
     "@types/raphael": "2.1.30",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
     "dts-bundle": "0.7.3",
     "electron": "13.6.6",
-    "electron-builder": "23.0.3",
+    "electron-builder": "22.11.7",
     "electron-rebuild": "3.2.7",
     "mocha": "8.2.1",
-    "spectron": "19.0.0",
-    "spectron-dialog-addon": "1.0.1",
+    "spectron": "^15.0.0",
     "xhr2": "0.2.0"
   },
   "dependencies": {
@@ -56,7 +56,6 @@
     "@babylonjs/gui": "6.0.0",
     "@babylonjs/loaders": "6.0.0",
     "@babylonjs/materials": "6.0.0",
-    "@babylonjs/post-processes": "6.0.0",
     "@babylonjs/procedural-textures": "6.0.0",
     "@blueprintjs/core": "3.51.3",
     "@blueprintjs/select": "3.18.10",
@@ -64,15 +63,10 @@
     "adm-zip": "0.4.14",
     "ansi-regex": "3.0.1",
     "antd": "4.18.7",
-    "babylonjs": "6.0.0",
-    "babylonjs-gui": "6.0.0",
     "babylonjs-gui-editor": "6.0.0",
     "babylonjs-inspector": "6.0.0",
-    "babylonjs-loaders": "6.0.0",
-    "babylonjs-materials": "6.0.0",
     "babylonjs-node-editor": "6.0.0",
     "babylonjs-post-process": "6.0.0",
-    "babylonjs-procedural-textures": "6.0.0",
     "babylonjs-serializers": "6.0.0",
     "cannon": "0.6.2",
     "ccapture.js": "1.1.0",
@@ -100,14 +94,16 @@
     "minimatch": "3.0.5",
     "minimist": "1.2.6",
     "monaco-editor": "0.18.x",
+    "nan": "^2.22.2",
     "nanoid": "3.1.31",
     "node-pty": "0.10.1",
     "pngjs": "6.0.0",
     "raphael": "2.3.0",
-    "react": "16.12.0",
+    "react": "17.0.2",
     "react-color": "2.19.3",
-    "react-dom": "16.12.0",
-    "react-split-pane": "0.1.92",
+    "react-dom": "17.0.2",
+    "react-mosaic-component": "5.0.0",
+    "react-split-pane": "next",
     "rimraf": "3.0.2",
     "spectorjs": "0.9.4",
     "typescript": "4.6.3",
